Moved relative URL resolving to Normalisation